prevent button from wrapping on small screens

--- a/src/Components/Search/Search.module.css
+++ b/src/Components/Search/Search.module.css
@@ -1,7 +1,13 @@
+.form {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .form input {
   border: 1px solid var(--border);
   padding: 6px 12px;
-  font-size: 14px;
+  font-size: 16px;
   margin: 0;
   background-color: transparent;
   color: var(--text);
